Programming languages and paradigms/Interpreter/examples/bad/cant_take_addr.ho
func main() {
    var p *int;
    p = &5; // error:3:10: cannot take the address
}